--- a/config.json
+++ b/config.json
@@ -6,7 +6,7 @@
       ""
     ],
     "description": "application description",
-    "docker_image": "supervisely/base-py-sdk:6.10.1",
+    "docker_image": "supervisely/base-py-sdk:latest",
     "entrypoint": "python -m uvicorn src.main:g.app --host 0.0.0.0 --port 8000",
     "port": 8000,
     "task_location": "workspace_tasks",
@@ -14,6 +14,8 @@
 
     "icon": "https://imgur.com/a9u0M3Y.png",
     "icon_cover": true,
+
+    "instance_version": "6.4.45",
 
     "context_menu": {
         "target": ["images_project"]
